fixing the model validation

--- a/6_model-validation.ipynb
+++ b/6_model-validation.ipynb
@@ -220,39 +220,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[28,  7],\n",
-       "       [ 4, 18]], dtype=int64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN_linear_test:  28\n",
+      "FN_linear_test:  4\n",
+      "TP_linear_test:  18\n",
+      "FP_linear_test:  7\n"
+     ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, y_pred_test_linear, labels=[1, 0])"
+    "CM_linear_test = confusion_matrix(y_test, y_pred_test_linear, labels=[1, 0])\n",
+    "TN_linear_test = CM_linear_test[0][0]\n",
+    "FN_linear_test = CM_linear_test[1][0]\n",
+    "TP_linear_test = CM_linear_test[1][1]\n",
+    "FP_linear_test = CM_linear_test[0][1]\n",
+    "print(\"TN_linear_test: \", TN_linear_test)\n",
+    "print(\"FN_linear_test: \", FN_linear_test)\n",
+    "print(\"TP_linear_test: \", TP_linear_test)\n",
+    "print(\"FP_linear_test: \", FP_linear_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a6978401",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TP_linear = 37 \n",
-    "FN_linear = 13\n",
-    "FP_linear = 15\n",
-    "TN_linear = 29"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "534e638f",
    "metadata": {},
    "outputs": [
@@ -275,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "537a9468",
    "metadata": {
     "scrolled": true
@@ -285,65 +279,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        RBF1       0.61      0.86      0.72        22\n",
-      "        RBF2       0.88      0.66      0.75        35\n",
-      "\n",
-      "    accuracy                           0.74        57\n",
-      "   macro avg       0.75      0.76      0.74        57\n",
-      "weighted avg       0.78      0.74      0.74        57\n",
-      "\n"
+      "TN_rbf_test:  23\n",
+      "FN_rbf_test:  3\n",
+      "TP_rbf_test:  19\n",
+      "FP_rbf_test:  12\n"
      ]
-    }
-   ],
-   "source": [
-    "# Confution Matrix for RBF kernel (Test)\n",
-    "from sklearn.metrics import classification_report\n",
-    "target_names = ['RBF1', 'RBF2']\n",
-    "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e7cb0555",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[23, 12],\n",
-       "       [ 3, 19]], dtype=int64)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, y_pred_test_rbf, labels=[1, 0])"
+    "CM_rbf_test = confusion_matrix(y_test, y_pred_test_rbf, labels=[1, 0])\n",
+    "TN_rbf_test = CM_rbf_test[0][0]\n",
+    "FN_rbf_test = CM_rbf_test[1][0]\n",
+    "TP_rbf_test = CM_rbf_test[1][1]\n",
+    "FP_rbf_test = CM_rbf_test[0][1]\n",
+    "print(\"TN_rbf_test: \", TN_rbf_test)\n",
+    "print(\"FN_rbf_test: \", FN_rbf_test)\n",
+    "print(\"TP_rbf_test: \", TP_rbf_test)\n",
+    "print(\"FP_rbf_test: \", FP_rbf_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "59fd3669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TP_rbf = 36\n",
-    "FN_rbf = 15\n",
-    "FP_rbf = 25 \n",
-    "TN_rbf = 75"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "7f5f9609",
    "metadata": {
     "scrolled": true
@@ -368,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "dc55c678",
    "metadata": {},
    "outputs": [
@@ -378,12 +337,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       POLY1       0.61      0.86      0.72        22\n",
-      "       POLY2       0.88      0.66      0.75        35\n",
+      "       POLY1       0.58      0.86      0.69        22\n",
+      "       POLY2       0.88      0.60      0.71        35\n",
       "\n",
-      "    accuracy                           0.74        57\n",
-      "   macro avg       0.75      0.76      0.74        57\n",
-      "weighted avg       0.78      0.74      0.74        57\n",
+      "    accuracy                           0.70        57\n",
+      "   macro avg       0.73      0.73      0.70        57\n",
+      "weighted avg       0.76      0.70      0.70        57\n",
       "\n"
      ]
     }
@@ -392,44 +351,38 @@
     "# Confution Matrix for Poly kernel \n",
     "from sklearn.metrics import classification_report\n",
     "target_names = ['POLY1', 'POLY2']\n",
-    "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
+    "print(classification_report(y_test, y_pred_test_poly, target_names=target_names))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "2d19b73f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[21, 14],\n",
-       "       [ 3, 19]], dtype=int64)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN_rbf_test:  21\n",
+      "FN_rbf_test:  3\n",
+      "TP_rbf_test:  19\n",
+      "FP_rbf_test:  14\n"
+     ]
     }
    ],
    "source": [
     "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, y_pred_test_poly, labels=[1, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "1b24848f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TP_poly = 32\n",
-    "FN_poly = 18 \n",
-    "FP_poly = 16\n",
-    "TN_poly = 28"
+    "CM_poly_test = confusion_matrix(y_test, y_pred_test_poly, labels=[1, 0])\n",
+    "TN_poly_test = CM_poly_test[0][0]\n",
+    "FN_poly_test = CM_poly_test[1][0]\n",
+    "TP_poly_test = CM_poly_test[1][1]\n",
+    "FP_poly_test = CM_poly_test[0][1]\n",
+    "print(\"TN_rbf_test: \", TN_poly_test)\n",
+    "print(\"FN_rbf_test: \", FN_poly_test)\n",
+    "print(\"TP_rbf_test: \", TP_poly_test)\n",
+    "print(\"FP_rbf_test: \", FP_poly_test)"
    ]
   },
   {
@@ -442,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "0f4f3bc8",
    "metadata": {},
    "outputs": [
@@ -471,31 +424,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "fa453a41",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[58,  4],\n",
-       "       [14, 54]], dtype=int64)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN_linear_test:  58\n",
+      "FN_linear_test:  14\n",
+      "TP_linear_test:  54\n",
+      "FP_linear_test:  4\n"
+     ]
     }
    ],
    "source": [
-    "# Confusion Matrix linear (Train)\n",
+    "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_train, y_pred_train_linear, labels=[1, 0])"
+    "CM_linear_train = confusion_matrix(y_train, y_pred_train_linear, labels=[1, 0])\n",
+    "TN_linear_train = CM_linear_train[0][0]\n",
+    "FN_linear_train = CM_linear_train[1][0]\n",
+    "TP_linear_train = CM_linear_train[1][1]\n",
+    "FP_linear_train = CM_linear_train[0][1]\n",
+    "print(\"TN_linear_test: \", TN_linear_train)\n",
+    "print(\"FN_linear_test: \", FN_linear_train)\n",
+    "print(\"TP_linear_test: \", TP_linear_train)\n",
+    "print(\"FP_linear_test: \", FP_linear_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "1c6833ab",
    "metadata": {},
    "outputs": [
@@ -524,31 +484,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "cfeab8ba",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[53,  9],\n",
-       "       [18, 50]], dtype=int64)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN_rbf_train:  53\n",
+      "FN_rbf_train:  18\n",
+      "TP_rbf_train:  50\n",
+      "FP_rbf_train:  9\n"
+     ]
     }
    ],
    "source": [
-    "# Confusion Matrix RBF (Train)\n",
+    "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_train, y_pred_train_rbf, labels=[1, 0])"
+    "CM_rbf_train = confusion_matrix(y_train, y_pred_train_rbf, labels=[1, 0])\n",
+    "TN_rbf_train = CM_rbf_train[0][0]\n",
+    "FN_rbf_train = CM_rbf_train[1][0]\n",
+    "TP_rbf_train = CM_rbf_train[1][1]\n",
+    "FP_rbf_train = CM_rbf_train[0][1]\n",
+    "print(\"TN_rbf_train: \", TN_rbf_train)\n",
+    "print(\"FN_rbf_train: \", FN_rbf_train)\n",
+    "print(\"TP_rbf_train: \", TP_rbf_train)\n",
+    "print(\"FP_rbf_train: \", FP_rbf_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "c73c9432",
    "metadata": {},
    "outputs": [
@@ -577,27 +544,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "931c15f1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[56,  6],\n",
-       "       [ 6, 62]], dtype=int64)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TN_poly_train:  56\n",
+      "FN_poly_train:  6\n",
+      "TP_poly_train:  62\n",
+      "FP_poly_train:  6\n"
+     ]
     }
    ],
    "source": [
-    "# Confusion Matrix Poly (Train)\n",
+    "# Confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_train, y_pred_train_poly, labels=[1, 0])"
+    "CM_poly_train = confusion_matrix(y_train, y_pred_train_poly, labels=[1, 0])\n",
+    "TN_poly_train = CM_poly_train[0][0]\n",
+    "FN_poly_train = CM_poly_train[1][0]\n",
+    "TP_poly_train = CM_poly_train[1][1]\n",
+    "FP_poly_train = CM_poly_train[0][1]\n",
+    "print(\"TN_poly_train: \", TN_poly_train)\n",
+    "print(\"FN_poly_train: \", FN_poly_train)\n",
+    "print(\"TP_poly_train: \", TP_poly_train)\n",
+    "print(\"FP_poly_train: \", FP_poly_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5093a1bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
